# food_app

eatfood/: db.sqlite3  pyproject.toml  readme.md  todo
eatfood/eatfood/: asgi.py  settings.py  urls.py  wsgi.py
eatfood/food_recomender/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
eatfood/food_recomender/migrations/: 0001_initial.py  0002_person_foodproduct.py  0002_remove_foodproduct_recepie_foodproduct_recipe.py  0003_articel.py  0003_remove_person_birthday_person_categories_and_more.py  0004_person_name.py
eatfood/static/css/: home.css  home_second.css  home_third.css
eatfood/templates/: all_articles.html  all_recipes.html  article_detail.html  base.html  home.html  index.html  recipe_detail.html  search.html  selectcategory.html  show_items.html
eatfood/templates/registration/: login.html  signup.html
eatfood/templates/website-menu-06/: index.html
eatfood/templates/website-menu-06/css/: style.css
